<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    
	    <Button 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/take_picture"
	        android:gravity="left"
	        android:layout_weight="1"/>
	    <Button 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/gps_position"
	        android:gravity="right"
	        android:layout_weight="1"/>
	</LinearLayout>
    
	<ImageView
	    android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/suspect"
		android:contentDescription="@string/description">
	    </ImageView>
	
	<Button
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
	    android:text="@string/call"
	    android:layout_gravity="center_horizontal"/>
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    
	    <Button 
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/back"
	        android:gravity="left"
	        android:layout_weight="1"/>
	    <Button 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/send"
	        android:gravity="right"
	        android:layout_weight="1"/>
	    
	</LinearLayout>

</LinearLayout>